--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "msw": "^0.44.2",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
