--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,6 +164,8 @@ jobs:
             fi
             npm run build
             echo "Build successful"
+            pwd
+            ls -la
       - *notify-on-fail
 
   terraform-validate:
@@ -210,9 +212,10 @@ jobs:
       - run:
           name: Upload build to S3
           command: |
+            cd ..
             pwd
             ls -la
-            aws --region eu-central-1 s3 cp build s3://chatapp-client-${CIRCLE_BRANCH}-app
+            aws --region eu-central-1 s3 cp ../build s3://chatapp-client-${CIRCLE_BRANCH}-app
       - *notify-on-fail
 
   aws-cloudfront-distribution:
