--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,33 +141,6 @@ jobs:
           command: npm run test
       - *notify-on-fail
 
-  build-app:
-    executor: app-executor
-    steps:
-      - checkout
-      - *show-current-branch-name
-      - *restore-cache
-      - aws-cli/setup:
-          profile-name: default
-      - run:
-          name: Build project
-          command: |
-            rm -rf .env
-            if [ "${CIRCLE_BRANCH}" == "develop" ]
-            then
-              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/develop .
-            elif [ "${CIRCLE_BRANCH}" == "staging" ]
-            then
-              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/staging .
-            else
-              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/production .
-            fi
-            npm run build
-            echo "Build successful"
-            pwd
-            ls -la
-      - *notify-on-fail
-
   terraform-validate:
     executor: terraform-executor
     steps:
@@ -212,10 +185,19 @@ jobs:
       - run:
           name: Upload build to S3
           command: |
-            cd ..
-            pwd
-            ls -la
-            aws --region eu-central-1 s3 cp ../build s3://chatapp-client-${CIRCLE_BRANCH}-app
+            rm -rf .env
+            if [ "${CIRCLE_BRANCH}" == "develop" ]
+            then
+              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/develop .
+            elif [ "${CIRCLE_BRANCH}" == "staging" ]
+            then
+              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/staging .
+            else
+              aws --region eu-central-1 s3 sync s3://chattyapp-env-files/frontend/production .
+            fi
+            npm run build
+            echo "Build successful"
+            aws --region eu-central-1 s3 cp build s3://chatapp-client-${CIRCLE_BRANCH}-app
       - *notify-on-fail
 
   aws-cloudfront-distribution:
@@ -319,34 +301,7 @@ workflows:
   build_and_deploy:
     jobs:
       - install-dependencies
-      # - linting:
-      #     requires:
-      #       - install-dependencies
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - code-formatter-check:
-      #     requires:
-      #       - linting
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - unit-test:
-      #     requires:
-      #       - code-formatter-check
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      - build-app:
+      - linting:
           requires:
             - install-dependencies
           filters:
@@ -355,27 +310,45 @@ workflows:
                 - develop
                 - staging
                 - main
-      # - terraform-validate:
-      #     requires:
-      #       - build-app
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - terraform-plan-and-apply:
-      #     requires:
-      #       - terraform-validate
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
+      - code-formatter-check:
+          requires:
+            - linting
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - unit-test:
+          requires:
+            - code-formatter-check
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - terraform-validate:
+          requires:
+            - unit-test
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - terraform-plan-and-apply:
+          requires:
+            - terraform-validate
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
       - upload-build-to-s3:
           requires:
-            - build-app
+            - terraform-plan-and-apply
           filters:
             branches:
               only:
