--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,7 @@ jobs:
       - run:
           name: Run unit test
           command: npm run test
+      - codecov/upload
       - *notify-on-fail
 
   terraform-validate:
@@ -308,43 +309,7 @@ workflows:
   build_and_deploy:
     jobs:
       - install-dependencies
-      # - linting:
-      #     requires:
-      #       - install-dependencies
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - code-formatter-check:
-      #     requires:
-      #       - linting
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - unit-test:
-      #     requires:
-      #       - code-formatter-check
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      # - terraform-validate:
-      #     requires:
-      #       - code-formatter-check
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      - terraform-plan-and-apply:
+      - linting:
           requires:
             - install-dependencies
           filters:
@@ -353,18 +318,54 @@ workflows:
                 - develop
                 - staging
                 - main
-      # - upload-build-to-s3:
-      #     requires:
-      #       - install-dependencies
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
-      - aws-cloudfront-distribution:
+      - code-formatter-check:
+          requires:
+            - linting
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - unit-test:
+          requires:
+            - code-formatter-check
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - terraform-validate:
+          requires:
+            - unit-test
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - terraform-plan-and-apply:
+          requires:
+            - terraform-validate
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - upload-build-to-s3:
           requires:
             - terraform-plan-and-apply
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
+      - aws-cloudfront-distribution:
+          requires:
+            - upload-build-to-s3
           filters:
             branches:
               only:
@@ -380,16 +381,16 @@ workflows:
                 - develop
                 - staging
                 - main
-      # - hold:
-      #     type: approval
-      #     requires:
-      #       - notify-via-slack
-      # - terraform-destroy:
-      #     requires:
-      #       - hold
-      #     filters:
-      #       branches:
-      #         only:
-      #           - develop
-      #           - staging
-      #           - main
+      - hold:
+          type: approval
+          requires:
+            - notify-via-slack
+      - terraform-destroy:
+          requires:
+            - hold
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - main
